@@ -1,3 +1,7 @@
+2012-06-19  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Snowflake task 1570.179: cHash issues with multilanguage domains
+
 2012-05-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #18551: target redirect path is saved in lower case
